@@ -76,6 +76,17 @@ endpointRegister ::
          , WithStatus 500 ()
          ]
     )
+endpointPasswordChange ::
+  AuthData '[Servant.Auth.JWTWithSession] ->
+  Route.Api.User.RequestPasswordChange ->
+  ClientM
+    ( Union
+        '[ WithStatus 200 Route.Api.User.ResponsePasswordChange
+         , WithStatus 400 ErrorParseBodyJson
+         , WithStatus 401 ErrorBearerAuth
+         , WithStatus 500 ()
+         ]
+    )
 endpointConfirm ::
   AuthData '[Servant.Auth.JWTWithSession] ->
   Route.Api.User.RequestConfirm ->
@@ -341,6 +352,7 @@ Route.Api.Routes
       { Route.Api.User.routeLogin = endpointLogin
       , Route.Api.User.routeLogout = endpointLogout
       , Route.Api.User.routeRegister = endpointRegister
+      , Route.Api.User.routePasswordChange = endpointPasswordChange
       , Route.Api.User.routeConfirm = endpointConfirm
       , Route.Api.User.routeProfile = endpointProfile
       }
